Refactoring Compile & Run